# TFLite

./: CMakeLists.txt  TensorflowLite_FashionMnist.tflite  inf.cpp  mnist_infer.cpp  mnist_infer.h
